style(notifications): fixed with scrollbar

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1563,6 +1563,7 @@ span.bold{
     top: 105%;
     right: 0;
     width: 25em;
+    max-height: 30em;
     background-color: white;
     -webkit-box-shadow: -1px 1px 5px 0px rgba(148,148,148,1);
     -moz-box-shadow: -1px 1px 5px 0px rgba(148,148,148,1);
@@ -1579,6 +1580,10 @@ span.bold{
     height: 100%;
     padding: 0.7em;
     transition: 0.2s;
+}
+.notifications-menu{
+    max-height: 26em;
+    overflow: auto;
 }
 ul.notifications-menu li{
     padding: 0;
